# proc-macro-crate

./: Cargo.toml  README.md  clippy.toml
.github/workflows/: rust.yml
src/: lib.rs  toml_parser.rs
tests/workspace_deps/: Cargo.toml
tests/workspace_deps/my-cool-dep/: Cargo.toml
tests/workspace_deps/my-cool-dep/src/: lib.rs
tests/workspace_deps/src/: lib.rs
tests/workspace_deps/test-crate/: Cargo.toml
tests/workspace_deps/test-crate/src/: lib.rs
