[package]
name = "proc-macro-crate"
version = "0.1.5"
authors = ["Bastian Köcher <git@kchr.de>"]
edition = "2018"
categories = [ "development-tools::procedural-macro-helpers" ]
documentation = "https://docs.rs/proc-macro-crate"
repository = "https://github.com/bkchr/proc-macro-crate"
keywords = [ "macro-rules", "crate", "macro", "proc-macro" ]
license = "Apache-2.0/MIT"
description = """
Replacement for crate (macro_rules keyword) in proc-macros
"""
readme = "./README.md"

[dependencies]
toml = "0.5.0"

[dev-dependencies]
quote = "1.0.7"
syn = "1.0.33"
proc-macro2 = "1.0.18"
